<resources>
    <string name="app_name">Cest La Vie Uzice</string>
    <string name="sendvi_i">Sendviči</string>
    <string name="giros">Giros</string>
    <string name="tortilje">Tortilje</string>
    <string name="burgeri">Burgeri</string>
    <string name="pizze">PIZZE</string>
    <string name="kom_lepinja">Kom.Lepinja</string>
    <string name="pala_inci">Palačinci</string>
    <string name="ostalo">Ostalo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dezerti">Dezerti</string>
    <string name="dodaj_u_korpu">Dodaj u korpu</string>
    <string name="ke_ap">Kečap</string>
    <string name="majonez">Majonez</string>
    <string name="rsd">RSD</string>
    <string name="nemate_nalog_registrujte_se">Nemate nalog? Registrujte se</string>
    <string name="ovde">OVDE</string>
    <string name="imate_nalog_prijavite_se">Imate nalog? Prijavite se</string>

    <string name="please_wait">Molimo sacekajte</string>
    <string name="cart">cart</string>
    <string name="poru_i">Poruči</string>
    <string name="po_alji">POŠALJI</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="xl">XL</string>
    <string name="x">X</string>
</resources>