<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_menu_24"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="16dp"
            android:fillViewport="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_menu">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/pizze_btn"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/button_default"
                    android:elevation="10dp"
                    android:maxLines="1"
                    android:text="@string/pizze"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sendvici"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/button_default"
                    android:elevation="10dp"
                    android:maxLines="1"
                    android:text="@string/sendvi_i"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/burgeri"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/button_default"
                    android:elevation="10dp"
                    android:maxLines="1"
                    android:text="@string/burgeri"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/tortilje"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/button_default"
                    android:elevation="10dp"
                    android:maxLines="1"
                    android:text="@string/tortilje"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deserts"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/button_default"
                    android:elevation="10dp"
                    android:maxLines="1"
                    android:text="@string/dezerti"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ostalo"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/button_default"
                    android:elevation="10dp"
                    android:maxLines="1"
                    android:text="@string/ostalo"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp" />


            </LinearLayout>


        </HorizontalScrollView>

        <fragment
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
