<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".view.fragments.OverviewFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/x_btn_background"
            android:src="@drawable/ic_baseline_close_two"
            app:civ_border_color="@color/cv_back"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toEndOf="@+id/guideline27"
            app:layout_constraintTop_toBottomOf="@+id/guideline28" />

        <ImageView
            android:id="@+id/img_dish"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/sendvic_sa_curecim_prsima" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/searchBtn"
            android:contentDescription="@string/cart"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            app:layout_constraintEnd_toEndOf="@id/guideline29"
            app:layout_constraintTop_toBottomOf="@+id/guideline28"
            app:tint="@color/white" />

        <LinearLayout
            android:id="@+id/ll_sizes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_dish">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/xbtn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/searchBtn"
                android:text="X"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/xlbtn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/xxl"
                android:maxLines="1"
                android:text="XL"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="15dp" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/cv_back"
            android:textSize="29sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_sizes"
            tools:text="Sendvic cureca prsa" />

        <TextView
            android:id="@+id/defaultingr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:maxLines="3"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="Kečap, pečurke, pavlaka, rukola" />

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cv_back"
            app:cardCornerRadius="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="33sp"
                    tools:text="340" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/rsd"
                    android:textColor="@color/white"
                    android:textSize="33sp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@color/ll_background"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Količina:"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/amount"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:inputType="number"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:text="1" />

                            <ImageView
                                android:id="@+id/add_btn"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:src="@drawable/ic_baseline_add_24" />

                            <ImageView
                                android:id="@+id/subtract_btn"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:src="@drawable/ic_baseline_remove_24" />


                        </LinearLayout>


                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_to_cart"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:backgroundTint="@color/searchBtn"
                        android:text="@string/dodaj_u_korpu"
                        app:cornerRadius="9dp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ll_ingredients"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3">

            <LinearLayout
                android:id="@+id/ll_ingr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="Prilozi"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ScrollView
                    android:id="@+id/scroll_ingr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkbox_ketchup"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:clickable="true"
                            android:buttonTint="@color/searchBtn"
                            android:checked="true"
                            android:text="@string/ke_ap"
                            android:focusable="true" />

                        <CheckBox
                            android:id="@+id/checkbox_mayo"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:buttonTint="@color/searchBtn"
                            android:text="@string/majonez"
                             />

                        <CheckBox
                            android:id="@+id/checkbox_tz"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:buttonTint="@color/searchBtn"
                            android:text="Caciki + 30 RSD" />

                        <CheckBox
                            android:id="@+id/checkbox_pomfrit"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:buttonTint="@color/searchBtn"
                            android:text="Pomfrit + 20 RSD" />

                        <CheckBox
                            android:id="@+id/checkbox_cucumber"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:buttonTint="@color/searchBtn"
                            android:text="Krastavac" />

                        <CheckBox
                            android:id="@+id/checkbox_tomato"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:buttonTint="@color/searchBtn"
                            android:text="Paradajz" />

                        <CheckBox
                            android:id="@+id/checkbox_urnebes"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:buttonTint="@color/searchBtn"
                            android:text="Urnebes" />

                        <CheckBox
                            android:id="@+id/checkbox_salad"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:buttonTint="@color/searchBtn"
                            android:text="Zelena salata" />

                        <CheckBox
                            android:id="@+id/checkbox_trapist"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:buttonTint="@color/searchBtn"
                            android:text="Trapist" />


                    </LinearLayout>


                </ScrollView>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.01" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.99" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
